--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -111,7 +111,7 @@
                     <div class="col-md-9">
                                                                                 <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank"><b>飞鸟加速</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://138.2.82.216/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank"><b>飞鸟加速</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -164,7 +164,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://138.2.82.216/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -523,16 +523,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-6-23-free-subscribe-node.htm" title="「6月23日」最高速度20.5M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「6月23日」最高速度20.5M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-14-free-node-subscribe.htm" title="「7月14日」最高速度19.2M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「7月14日」最高速度19.2M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-17-free-v2ray.htm" title="「6月17日」最高速度20.9M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「6月17日」最高速度20.9M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-4-free-node-subscribe.htm" title="「7月4日」最高速度22.1M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「7月4日」最高速度22.1M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-5-free-v2ray.htm" title="「7月5日」最高速度18.9M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「7月5日」最高速度18.9M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-1-node-share-links.htm" title="「7月1日」最高速度18.4M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「7月1日」最高速度18.4M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-11-node-share-links.htm" title="「7月11日」最高速度20.1M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「7月11日」最高速度20.1M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-12-free-v2ray-subscribe.htm" title="「6月12日」最高速度22.8M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「6月12日」最高速度22.8M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-13-free-node-subscribe-links.htm" title="「6月13日」最高速度20.7M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「6月13日」最高速度20.7M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-27-free-node-subscribe-links.htm" title="「6月27日」最高速度18.4M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「6月27日」最高速度18.4M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-19-free-node-subscribe-links.htm" title="「6月19日」最高速度18.8M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「6月19日」最高速度18.8M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-10-node-share.htm" title="「7月10日」最高速度19.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「7月10日」最高速度19.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-17-free-v2ray.htm" title="「6月17日」最高速度20.9M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「6月17日」最高速度20.9M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-10-free-node-subscribe-links.htm" title="「6月10日」最高速度21.7M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「6月10日」最高速度21.7M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-15-free-node-subscribe-links.htm" title="「6月15日」最高速度20.6M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「6月15日」最高速度20.6M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-30-node-share.htm" title="「6月30日」最高速度18.6M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「6月30日」最高速度18.6M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-23-free-subscribe-node.htm" title="「6月23日」最高速度20.5M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「6月23日」最高速度20.5M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-17-free-high-speed-nodes.htm" title="「7月17日」最高速度23M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「7月17日」最高速度23M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-12-node-share.htm" title="「7月12日」最高速度20.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「7月12日」最高速度20.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -544,7 +544,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
